# ms-program

./: .gitignore  Anchor.toml  anchor-sync.sh  package.json
programs/madscape/: Cargo.toml
programs/madscape/src/: errors.rs  lib.rs  maths.rs  strings.rs
programs/madscape/src/constants/: admin.rs  matches.rs  mod.rs
programs/madscape/src/instructions/: mod.rs
programs/madscape/src/instructions/admin/: approve_fee_mint.rs  create_release_authority.rs  mod.rs  revoke_fee_mint.rs  update_release_authority.rs
programs/madscape/src/instructions/matches/: close_match.rs  mod.rs
programs/madscape/src/instructions/matches/mint/: cancel_open_match_mint.rs  cancel_private_match_mint.rs  create_open_match_mint.rs  create_private_match_mint.rs  end_match_mint.rs  join_match_mint.rs  mod.rs
programs/madscape/src/instructions/matches/sol/: cancel_open_match.rs  cancel_private_match.rs  create_open_match.rs  create_private_match.rs  end_match.rs  join_match.rs  mod.rs
programs/madscape/src/state/: matches.rs  mod.rs  release_authority.rs
scripts/: approveMint.ts  common.ts  createReleaseAuthority.ts  fetchReleaseAuthority.ts  sendMint.ts
tests/: madscape.ts
