[package]
description = "Created with Anchor"
edition = "2021"
name = "madscape"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "madscape"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.29.0" }
arrayref = "0.3.7"
anchor-spl = {version = "0.29.0"}
solana-program = ">=1.14, <1.17"
